# crafting-interpreters

./: .gitignore  README.md
clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  debug.c  debug.h  main.c  memory.h  values.c  values.h
clox/bytecode/: chunk.c  chunk.h
clox/bytecode/debug/: debug.c  debug.h
clox/compiler/: compiler.c  compiler.h
clox/instructions/: values.c  values.h
clox/lox_examples/: lox1.txt
clox/memory_operations/: memory.c  memory.h
clox/scanner/: scanner.c  scanner.h
clox/virtual_machine/: vm.c  vm.h
clox/virtuel_machine/: vm.c  vm.h
jlox/: pom.xml
jlox/src/main/examples/: test1.jlox
jlox/src/main/java/grupa/: Lox.java  Parser.java  Scanner.java  Token.java  TokenType.java
jlox/src/main/java/grupa/Expressions/: Assign.java  Binary.java  Call.java  Conditional.java  Environment.java  Expr.java  ExprVisitor.java  Expression.java  Function.java  Get.java  Grouping.java  Literal.java  Logical.java  Set.java  Super.java  This.java  Unary.java  Variable.java  Visitor.java
jlox/src/main/java/grupa/Interpreter/: BreakException.java  ContinueException.java  Interpreter.java  LoxCallable.java  LoxInstance.java  RuntimeError.java
jlox/src/main/java/grupa/Parser/: Ast.java  Interpreter.java  ParseError.java  Parser.java  Resolver.java  RuntimeError.java
jlox/src/main/java/grupa/Resolver/: ClassType.java  FunctionType.java  Resolver.java  VariableState.java
jlox/src/main/java/grupa/Runtime/: Interpreter.java
jlox/src/main/java/grupa/Scanner/: Scanner.java  Token.java  TokenType.java
jlox/src/main/java/grupa/tools/: Expr.java  (+2 more)
(+33 files in other folders)
